[project]
name = "research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv~=0.9.9",
    "langchain~=1.2.10",
    "langchain-openai~=1.1.9",
    "langchain-tavily~=0.2.17",
    "langgraph~=1.0.8",
    "pydantic~=2.12.5",
]
